--- a/src/app/modules/guide/components/activities/activities.component.html
+++ b/src/app/modules/guide/components/activities/activities.component.html
@@ -28,25 +28,26 @@
     <!-- Grid column -->
 
     <!-- Grid column -->
-    <div class="col-lg-7">
+    <div class="col-lg-7 to-right">
 
       <!-- Category -->
       <a href="#!" class="green-text">
         <h6 class="font-weight-bold mb-3"><mdb-icon fas icon="utensils" class="pr-2"></mdb-icon>Food</h6>
       </a>
       <!-- Post title -->
-      <h3 class="font-weight-bold mb-3"><strong>Title of the news</strong></h3>
+      <h3 class="font-weight-bold mb-3"><strong>Tourist name</strong></h3>
       <!-- Excerpt -->
-      <p>Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime
-        placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus et aut officiis debitis.</p>
+      
+      <div>Duration: 5</div>
+      <div>Number of people: 5</div>
+      <p>Message By tourist: "Review given"</p>
       <!-- Post data -->
-      <p>by <a><strong>Carine Fox</strong></a>, 19/08/2018</p>
+      <p>by <a><strong>Date</strong></a>, 19/08/2018</p>
       <!-- Read more button -->
-      <a mdbBtn color="success" mdbWavesEffect>Read more</a>
+      <a mdbBtn color="success" mdbWavesEffect>Ratings given</a>
 
     </div>
     <!-- Grid column -->
-
   </div>
   <!-- Grid row -->
 
@@ -54,29 +55,6 @@
 
   <!-- Grid row -->
   <div class="row">
-
-    <!-- Grid column -->
-    <div class="col-lg-7">
-
-      <!-- Category -->
-      <a href="#!" class="pink-text">
-        <h6 class="font-weight-bold mb-3"><mdb-icon far icon="image" class="pr-2"></mdb-icon>Lifestyle</h6>
-      </a>
-      <!-- Post title -->
-      <h3 class="font-weight-bold mb-3"><strong>Title of the news</strong></h3>
-      <!-- Excerpt -->
-      <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum
-        deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non
-        provident.</p>
-      <!-- Post data -->
-      <p>by <a><strong>Carine Fox</strong></a>, 14/08/2018</p>
-      <!-- Read more button -->
-      <a mdbBtn color="pink" mdbWavesEffect class="mb-lg-0 mb-4">Read more</a>
-
-    </div>
-    <!-- Grid column -->
-
-    <!-- Grid column -->
     <div class="col-lg-5">
 
       <!-- Featured image -->
@@ -88,6 +66,29 @@
       </div>
 
     </div>
+    <!-- Grid column -->
+    <div class="col-lg-7 to-right">
+
+      <!-- Category -->
+      <a href="#!" class="pink-text">
+        <h6 class="font-weight-bold mb-3"><mdb-icon far icon="image" class="pr-2"></mdb-icon>Lifestyle</h6>
+      </a>
+      <!-- Post title -->
+      <h3 class="font-weight-bold mb-3"><strong>Tourist name</strong></h3>
+      <!-- Excerpt -->
+      
+      <div>Duration: 5</div>
+      <div>Number of people: 5</div>
+      <p>Message By tourist: "Review given"</p>
+      <!-- Post data -->
+      <p>by <a><strong>Date</strong></a>, 19/08/2018</p>
+      <!-- Read more button -->
+      <a mdbBtn color="pink" mdbWavesEffect>Ratings given</a>
+    </div>
+    <!-- Grid column -->
+
+    <!-- Grid column -->
+    
     <!-- Grid column -->
 
   </div>
@@ -113,21 +114,23 @@
     <!-- Grid column -->
 
     <!-- Grid column -->
-    <div class="col-lg-7">
+    <div class="col-lg-7 to-right">
 
       <!-- Category -->
       <a href="#!" class="indigo-text">
         <h6 class="font-weight-bold mb-3"><mdb-icon fas icon="suitcase" class="pr-2"></mdb-icon>Travels</h6>
       </a>
       <!-- Post title -->
-      <h3 class="font-weight-bold mb-3"><strong>Title of the news</strong></h3>
+      <h3 class="font-weight-bold mb-3"><strong>Tourist name</strong></h3>
       <!-- Excerpt -->
-      <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur
-        magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro qui dolorem ipsum quia sit amet.</p>
+      
+      <div>Duration: 5</div>
+      <div>Number of people: 5</div>
+      <p>Message By tourist: "Review given"</p>
       <!-- Post data -->
-      <p>by <a><strong>Carine Fox</strong></a>, 11/08/2018</p>
+      <p>by <a><strong>Date</strong></a>, 19/08/2018</p>
       <!-- Read more button -->
-      <a mdbBtn color="indigo" mdbWavesEffect>Read more</a>
+      <a mdbBtn color="indigo" mdbWavesEffect>Ratings given</a>
 
     </div>
     <!-- Grid column -->
