--- a/src/app/modules/home/top-deals/top-deals.component.html
+++ b/src/app/modules/home/top-deals/top-deals.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class="col-md-2">
+    <div class="col-md-2 col-6 col-sm-4">
         <!-- Card -->
         <mdb-card style="background-image: url(https://media-cdn.tripadvisor.com/media/photo-s/0a/c4/72/f6/jal-mahal-jaipur-tour.jpg); background-size:cover;">
             <mdb-card-body class="mask waves-effect waves-light rgba-blue-light">
@@ -11,7 +11,7 @@
                         <div>Explore the cultural delight in <b>3 days and 2 nights</b></div>
                     </mdb-card-text>
                     <div class="flex-row">
-                        <a class="card-link">Card link <span><i class="far fa-heart"></i></span> </a>
+                        <a class="card-link"><span><i class="far fa-heart"></i></span> </a>
                         <a class="card-link">View More</a>
                     </div>
                 </div>
@@ -20,7 +20,7 @@
         </mdb-card>
     </div>
 
-    <div class="col-md-2">
+    <div class="col-md-2 col-6 col-sm-4">
         <!-- Card -->
         <mdb-card>
             <mdb-card-body>
@@ -37,7 +37,7 @@
         </mdb-card>
     </div>
 
-    <div class="col-md-2">
+    <div class="col-md-2 col-6 col-sm-4">
         <!-- Card -->
         <mdb-card>
             <mdb-card-body>
@@ -54,7 +54,7 @@
         </mdb-card>
     </div>
 
-    <div class="col-md-2">
+    <div class="col-md-2 col-6 col-sm-4">
         <!-- Card -->
         <mdb-card>
             <mdb-card-body>
@@ -70,7 +70,7 @@
             </mdb-card-body>
         </mdb-card>
     </div>
-    <div class="col-md-2">
+    <div class="col-md-2 col-6 col-sm-4">
         <!-- Card -->
         <mdb-card>
             <mdb-card-body>
@@ -86,7 +86,7 @@
             </mdb-card-body>
         </mdb-card>
     </div>
-    <div class="col-md-2">
+    <div class="col-md-2 col-6 col-sm-4">
         <!-- Card -->
         <mdb-card>
             <mdb-card-body>
