--- a/src/app/modules/tourists/components/bookings/bookings.component.html
+++ b/src/app/modules/tourists/components/bookings/bookings.component.html
@@ -1,4 +1,4 @@
-<mdb-card class="w-50">
+<mdb-card class="booking-card">
     <mdb-card-body>
         <mdb-card-title>
             <mdb-badge class="float-right amy-crisp-gradient" default="true">PERSONALISED TOUR</mdb-badge>
@@ -40,7 +40,7 @@
                 </div>
                 <div class="row">
                     <div class="col-md-4">
-                        <h6><a href="#!">Arjun Gupta</a></h6>
+                        <h6><a [routerLink]="['/guideprofile']">Arjun Gupta</a></h6>
                     </div>
                     <div class="col-md-4">
                         <h6>Rs.500/hour</h6>
