--- a/src/app/modules/tourists/components/histories/histories.component.html
+++ b/src/app/modules/tourists/components/histories/histories.component.html
@@ -47,33 +47,43 @@
                     </div>
                     <!-- Post title -->
                     <h3 class="font-weight-bold mb-3"><strong>Kovalam, Kerala</strong></h3>
-                    <div class="container ">
+                    <div class="container history">
                         <div class="row fromto">
-                            <div class="col-md-3">
+                            <div class="col-md-2">
                                 FROM
                             </div>
-                            <div class="col-md-3">
+                            <div class="col-md-2">
                                 TO
                             </div>
-                            <div class="col-md-3">
+                            <div class="col-md-2">
 
                             </div>
                         </div>
-                        <div class="row">
-                            <div class="col-md-3">
-                                <h6>11 Aug'19</h6>
+                        <div class="row dates">
+                            <div class="col-md-2">
+                                11 Aug'19
                             </div>
-                            <div class="col-md-3">
-                                <h6>14 Aug'19</h6>
+                            <div class="col-md-2">
+                                14 Aug'19
                             </div>
-                            <div class="col-md-3">
-                                <i class="fas fa-user-friends"></i> Anika + 4
+                            <div class="col-md-2">
+                                <p><i class="fas fa-user-friends"></i> Anika + 4</p>
                             </div>
                         </div>
 
 
                     </div>
-                    <p>With Local <a><strong> Harsh Sharma</strong></a></p>
+                    <p>With Local
+                        <a>
+                            <mdb-icon fas icon="user-check"></mdb-icon><strong> Harsh Sharma</strong></a>
+                    </p>
+                    <div>Rate this trip
+                        <mdb-icon far icon="star"></mdb-icon>
+                        <mdb-icon far icon="star"></mdb-icon>
+                        <mdb-icon far icon="star"></mdb-icon>
+                        <mdb-icon far icon="star"></mdb-icon>
+                        <mdb-icon far icon="star"></mdb-icon>
+                    </div>
                     <!-- Read more button -->
                     <button mdbBtn type="button" style="color:white; background-color: #aeea00 !important;" mdbWavesEffect>VIEW MORE</button>
 
@@ -89,8 +99,23 @@
             <div class="row">
 
                 <!-- Grid column -->
+                <div class="col-lg-4">
+
+                    <!-- Featured image -->
+                    <div class="view overlay rounded z-depth-2 mb-lg-0 mb-4 waves-light" mdbWavesEffect>
+                        <img class="img-fluid" src="https://www.makemytrip.com/travel-guide/media/dg_image/kovalam/thumb/Light%20House_19_85_kovalam_938_410.jpg" alt="Sample image">
+                        <a>
+                            <div class="mask rgba-white-slight"></div>
+                        </a>
+                    </div>
+
+                </div>
+                <!-- Grid column -->
+
+                <!-- Grid column -->
                 <div class="col-lg-8">
 
+                    <!-- Category -->
                     <div class="container">
                         <div class="row">
                             <div class="col-md-3">
@@ -131,24 +156,11 @@
                             </div>
                         </div>
 
+
                     </div>
                     <p>With Local <a><strong> Harsh Sharma</strong></a></p>
                     <!-- Read more button -->
                     <button mdbBtn type="button" style="color:white; background-color: #aeea00 !important;" mdbWavesEffect>VIEW MORE</button>
-
-                </div>
-                <!-- Grid column -->
-
-                <!-- Grid column -->
-                <div class="col-lg-4">
-
-                    <!-- Featured image -->
-                    <div class="view overlay rounded z-depth-2 waves-light" mdbWavesEffect>
-                        <img class="img-fluid" src="https://mdbootstrap.com/img/Photos/Others/img%20(34).jpg" alt="Sample image">
-                        <a>
-                            <div class="mask rgba-white-slight"></div>
-                        </a>
-                    </div>
 
                 </div>
                 <!-- Grid column -->
