--- a/src/app/modules/tourists/components/histories/histories.component.scss
+++ b/src/app/modules/tourists/components/histories/histories.component.scss
@@ -1,3 +1,9 @@
 .fromto div {
     color: rgb(7, 189, 189);
+    font-size: 18px;
+}
+
+.dates div {
+    font-size: 17px;
+    font-weight: 500;
 }
