--- a/src/app/modules/tourists/components/requests/requests.component.html
+++ b/src/app/modules/tourists/components/requests/requests.component.html
@@ -2,24 +2,25 @@
     The pending Booking requests sent to the Tourist Guides show up here.
 </p>
 
+<div class="request-card">
+    <mdb-card>
+        <div class="container1">
+            <mdb-card-body>
+                <mdb-card-title>
+                    <h4>Jaipur, Rajasthan</h4>
+                </mdb-card-title>
 
-<mdb-card class="w-50">
-    <div class="container1">
-        <mdb-card-body>
-            <mdb-card-title>
-                <h4>Jaipur, Rajasthan</h4>
-            </mdb-card-title>
-
-            <div class="grey-text">
-                <div>Guide: <a href="#!">Arjun Gupta</a></div>
-                <div>Price: Rs.500/hour</div>
-                <div>Booking Date: March 25,2020</div>
-            </div>
-        </mdb-card-body>
-        <img src="https://cdn6.dissolve.com/p/D18_44_025/D18_44_025_0004_600.jpg" class="float-right" alt="...">
-    </div>
-    <mdb-card-footer class="text-muted" style="height: 55px;">
-        <a href="#!">View more</a>
-        <button class="float-right footer-btn" style="margin: auto;" color="danger" ng mdbBtn type="button" size="sm" mdbWavesEffect><b>CANCEL REQUEST</b></button>
-    </mdb-card-footer>
-</mdb-card>
+                <div class="grey-text">
+                    <div>Guide: <a href="#!">Arjun Gupta</a></div>
+                    <div>Price: Rs.500/hour</div>
+                    <div>Booking Date: March 25,2020</div>
+                </div>
+            </mdb-card-body>
+            <img src="https://cdn6.dissolve.com/p/D18_44_025/D18_44_025_0004_600.jpg" class="float-right" alt="...">
+        </div>
+        <mdb-card-footer class="text-muted" style="height: 55px;">
+            <a href="#!">View more</a>
+            <button class="float-right footer-btn" style="margin: auto;" color="danger" ng mdbBtn type="button" size="sm" mdbWavesEffect><b>CANCEL REQUEST</b></button>
+        </mdb-card-footer>
+    </mdb-card>
+</div>
