--- a/src/app/modules/tourists/components/bookings/bookings.component.scss
+++ b/src/app/modules/tourists/components/bookings/bookings.component.scss
@@ -2,3 +2,16 @@ mdb-card-text {
     margin-bottom: 0px;
     padding: 0px;
 }
+
+@media (min-width: 600px) {
+    .booking-card {
+        width: 50%;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    .booking-card {
+        width: 100%;
+        // height: 250px;
+    }
+}
