--- a/src/app/modules/tourists/components/requests/requests.component.scss
+++ b/src/app/modules/tourists/components/requests/requests.component.scss
@@ -13,3 +13,15 @@ mdb-card-text,
 mdb-card-text div {
     font-size: medium !important;
 }
+
+@media only screen and (max-width: 600px) {
+    .request-card {
+        width: 360px;
+        margin-left: -30px;
+        // height: 250px;
+    }
+}
+
+.request-card {
+    width: 50%;
+}
