--- a/src/app/shared/components/login-page/login-page.component.html
+++ b/src/app/shared/components/login-page/login-page.component.html
@@ -1,3 +1,69 @@
-<p>
-  login-page works!
-</p>
+<div class="container">
+  <h1>Logo work or any other thing</h1>
+  <div class="row">
+  <div class="col-md-12" >
+
+    <!-- Card -->
+<mdb-card>
+  <div class="view rgba-white-slight waves-light" mdbWavesEffect>
+    <a>
+      <div class="mask"></div>
+    </a>
+  </div>
+  <!--Card content-->
+  <mdb-card-body>
+    <!--Title-->
+    <ul class="nav nav-tabs center-class" id="myTab" role="tablist">
+      <li class="nav-item">
+        <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home"
+          aria-selected="true"><h3>Guide</h3></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile"
+          aria-selected="false"><h3>Tourist</h3></a>
+      </li>
+      
+    </ul>
+    <div class="tab-content" id="myTabContent">
+      <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
+        <br>
+        <div class="md-form">
+          <mdb-icon fas icon="envelope" class="prefix"></mdb-icon>
+          <input mdbInput type="email" id="form2" class="form-control">
+          <label for="form2">Email</label>
+        </div>
+        <br>
+        <div class="md-form">
+          <mdb-icon fas icon="unlock-alt" class="prefix"></mdb-icon>
+          <input mdbInput type="password" id="form2" class="form-control">
+          <label for="form2">password</label>
+          <br>
+          <a href="#" mdbBtn color="primary" mdbWavesEffect>Login</a>
+        </div>
+      </div>
+      <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+        <br>
+        <div class="md-form">
+          <mdb-icon fas icon="envelope" class="prefix"></mdb-icon>
+          <input mdbInput type="email" id="form2" class="form-control">
+          <label for="form2">Email</label>
+        </div>
+        <br>
+        <div class="md-form">
+          <mdb-icon fas icon="unlock-alt" class="prefix"></mdb-icon>
+          <input mdbInput type="password" id="form2" class="form-control">
+          <label for="form2">password</label>
+          <br>
+          <a href="#" mdbBtn color="primary" mdbWavesEffect>Login</a>
+        </div>
+      </div>
+      
+    </div>
+  </mdb-card-body>
+</mdb-card>
+<!-- Card -->
+  </div>
+</div>
+
+
+</div>
