--- a/src/app/modules/guide/components/activities/activities.component.html
+++ b/src/app/modules/guide/components/activities/activities.component.html
@@ -1,3 +1,43 @@
+<table class="table">
+  <thead class="black white-text">
+    <tr>
+      <th scope="col">#</th>
+      <th scope="col">From</th>
+      <th scope="col">To</th>
+      <th scope="col">Tourist</th>
+      <th scope="col">Price</th>
+      <th scope="col">People</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th scope="row">1</th>
+      <td>11 Aug'2020</td>
+      <td>20 Aug'2020</td>
+      <td>Arjun kumar singh</td>
+      <td>2000</td>
+      <td>5</td>
+    </tr>
+    <tr>
+      <th scope="row">2</th>
+      <td>11 Aug'2020</td>
+      <td>20 Aug'2020</td>
+      <td>Arjun kumar singh</td>
+      <td>2000</td>
+      <td>5</td>
+    </tr>
+    <tr>
+      <th scope="row">3</th>
+      <td>11 Aug'2020</td>
+      <td>20 Aug'2020</td>
+      <td>Arjun kumar singh</td>
+      <td>2000</td>
+      <td>5</td>
+    </tr>
+  </tbody>
+</table>
+
+<!-- /table -->
 <div class="row">
   <div class="col-md-12">
 <!-- Section: Blog v.1 -->
