--- a/src/app/shared/components/login-page/login-page.component.html
+++ b/src/app/shared/components/login-page/login-page.component.html
@@ -10,6 +10,9 @@
       <div class="mask"></div>
     </a>
   </div>
+  <mdb-card-title>
+    <h1 class="center-class" >Voila</h1> 
+  </mdb-card-title>
   <!--Card content-->
   <mdb-card-body>
     <!--Title-->
@@ -39,6 +42,9 @@
           <label for="form2">password</label>
           <br>
           <a href="#" mdbBtn color="primary" mdbWavesEffect>Login</a>
+          <br>
+          <br>
+          <a href="...">Are you a guide? Register now</a>
         </div>
       </div>
       <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
@@ -55,6 +61,9 @@
           <label for="form2">password</label>
           <br>
           <a href="#" mdbBtn color="primary" mdbWavesEffect>Login</a>
+          <br>
+          <br>
+          <a href="...">Wanna explore? Register now</a>
         </div>
       </div>
       
