map work complete

--- a/src/app/modules/home/map/map.component.scss
+++ b/src/app/modules/home/map/map.component.scss
@@ -10,3 +10,11 @@
 .state:hover{
     fill: #447799;
 }
+.map-detail{
+    text-align: center;
+    position: relative;
+    top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%)
+}
